compiler/kernc_cli/tests/soundness/run-pass/projection/chained_concrete_projection_normalizes.rn
// class: projection-normalization
// source: normalize a two-step concrete associated projection through an intermediate concrete type
// exit: 0

type Step = trait {
    type Mid;
};

type Finish = trait {
    type Out;
};

type Shell = struct {};
type Bytes = []u8;

impl Bytes: Step {
    type Mid = Shell;
}

impl Shell: Finish {
    type Out = i32;
}

fn project(value: Bytes) Bytes.Step.Mid.Finish.Out {
    _ = value;
    return 7;
}

fn main() i32 {
    let value = project("ok");
    let align = @alignOf[Bytes.Step.Mid.Finish.Out]();
    return if (value == 7 and align == 4) { 0 } else { 1 };
}
