compiler/kernc_cli/tests/soundness/reject/specialization/projection_must_respect_impl_where_clause.rn
// Inspired by projection/proof selection bugs: a global impl must not supply
// an associated type result when its own where-clause is unsatisfied.
// stderr: cannot normalize associated type projection

trait Need {};

trait HasOut {
    type Out;
};

struct X {};

impl[T] T: HasOut
    where T: Need,
{
    type Out = i32;
}

fn take(value: X.HasOut.Out) i32 {
    return value;
}

fn main() i32 {
    return take(7);
}
